# Bert-VITS2

./: .gitignore  config.py  config.yml  pyproject.toml  train_ms.py
text/: __init__.py  chinese_bert.py  english.py
