[tool.poetry]
name = "bert-vits2"
version = "0.1.0"
description = ""
authors = ["wojiazaiyugang <wojiazaiyugang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
librosa = "0.9.2"
torch = {version = "2.1.1", source = "pytorch"}
torchaudio = {version = "2.1.1", source = "pytorch"}
gradio = "3.50.2"
wetextprocessing = "^1.0.4.1"
matplotlib = "^3.9.2"
numpy = "<2"
numba = "^0.60.0"
phonemizer = "^3.3.0"
tensorboard = "^2.17.1"
scipy = "<1.14"
unidecode = "^1.3.8"
amfm-decompy = "^1.0.11"
jieba = "^0.42.1"
transformers = "^4.44.2"
pypinyin = "^0.52.0"
cn2an = "^0.5.22"
av = "^13.0.0"
mecab-python3 = "^1.0.9"
loguru = "^0.7.2"
unidic-lite = "^1.0.8"
cmudict = "^1.0.30"
fugashi = "^1.3.2"
num2words = "^0.5.13"
pyyaml = "^6.0.2"
requests = "^2.32.3"
pyopenjtalk-prebuilt = "^0.3.0"
jaconv = "^0.4.0"
psutil = "^6.0.0"
gputil = "^1.4.0"
vector-quantize-pytorch = "^1.17.3"
g2p-en = "^2.1.0"
sentencepiece = "^0.2.0"
pykakasi = "^2.3.0"
langid = "^1.1.6"
nltk = "^3.9.1"

[[tool.poetry.source]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
